基本学习完milvus

--- a/操作向量数据库milvus/c_Create-a-Collection.ipynb
+++ b/操作向量数据库milvus/c_Create-a-Collection.ipynb
@@ -43,6 +43,8 @@
     "    dtype=DataType.INT64,\n",
     "    # Switch to control if the field is primary key field.\n",
     "    is_primary=True,\n",
+    "    # Switch to enable or disable automatic ID (primary key) allocation.\n",
+    "    # auto_id=False\n",
     ")\n",
     "book_name = FieldSchema(\n",
     "    name=\"book_name\",\n",
