--- a/操作向量数据库milvus/d_Manage-Data.ipynb
+++ b/操作向量数据库milvus/d_Manage-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -19,13 +19,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "['book_table']"
+      "text/plain": "['book_table', 'huggingface_db']"
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,13 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "# All search and query operations within Milvus are executed in memory. Load the collection to memory before conducting a vector similarity search.\n",
+    "collection.load()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442694167231987725, success count: 2000, err count: 0)"
+      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442749853962338306, success count: 2000, err count: 0)"
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "False\n",
-      "2000\n"
+      "86000\n"
      ]
     }
    ],
@@ -126,9 +141,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# Releases the collection data from memory.\n",
+    "collection.release()\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
