--- a/操作向量数据库milvus/f0_Search_and_Query.ipynb
+++ b/操作向量数据库milvus/f0_Search_and_Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442739402773364739, success count: 2000, err count: 0)"
+      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442749860659855361, success count: 2000, err count: 0)"
      },
-     "execution_count": 116,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,25 +72,12 @@
     "    index_name=\"scalar_index\",\n",
     ")\n",
     "\n",
+    "collection.load()\n",
+    "\n",
     "collection.insert([[i for i in range(2000)],\n",
     "                   [str(i) for i in range(2000)],\n",
     "                   [i for i in range(10000, 12000)],\n",
     "                   [[random.random() for _ in range(2)] for _ in range(2000)]])"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "outputs": [],
-   "source": [
-    "# All search and query operations within Milvus are executed in memory. Load the collection to memory before conducting a vector similarity search.\n",
-    "collection.load()"
    ],
    "metadata": {
     "collapsed": false,
@@ -113,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "search_params = {\n",
@@ -144,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1107, 433, 1489, 825, 140, 768, 174, 1275, 1083, 404]\n",
-      "[1.1048490705434233e-05, 6.296827632468194e-05, 6.588322867173702e-05, 8.589174831286073e-05, 0.0001263414742425084, 0.00013537416816689074, 0.00020955209038220346, 0.0002286857779836282, 0.00024863710859790444, 0.00026549637550488114]\n"
+      "[1107, 1050, 1263, 201, 598, 597, 833, 1805, 828, 1589]\n",
+      "[1.1048490705434233e-05, 1.2806008271581959e-05, 1.860082738858182e-05, 2.0475592464208603e-05, 2.5180794182233512e-05, 2.699909600778483e-05, 2.749182931438554e-05, 3.0744013201911e-05, 4.841619738726877e-05, 5.490558032761328e-05]\n"
      ]
     }
    ],
@@ -171,22 +158,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "id: 1107, distance: 1.1048490705434233e-05, entity: {'book_id': 1107, 'book_name': '1107', 'word_count': 11107}\n",
-      "id: 433, distance: 6.296827632468194e-05, entity: {'book_id': 433, 'book_name': '433', 'word_count': 10433}\n",
-      "id: 1489, distance: 6.588322867173702e-05, entity: {'book_id': 1489, 'book_name': '1489', 'word_count': 11489}\n",
-      "id: 825, distance: 8.589174831286073e-05, entity: {'book_id': 825, 'book_name': '825', 'word_count': 10825}\n",
-      "id: 140, distance: 0.0001263414742425084, entity: {'book_id': 140, 'book_name': '140', 'word_count': 10140}\n",
-      "id: 768, distance: 0.00013537416816689074, entity: {'book_id': 768, 'book_name': '768', 'word_count': 10768}\n",
-      "id: 174, distance: 0.00020955209038220346, entity: {'book_id': 174, 'book_name': '174', 'word_count': 10174}\n",
-      "id: 1275, distance: 0.0002286857779836282, entity: {'book_id': 1275, 'book_name': '1275', 'word_count': 11275}\n",
-      "id: 1083, distance: 0.00024863710859790444, entity: {'book_id': 1083, 'book_name': '1083', 'word_count': 11083}\n",
-      "id: 404, distance: 0.00026549637550488114, entity: {'book_id': 404, 'book_name': '404', 'word_count': 10404}\n"
+      "id: 1050, distance: 1.2806008271581959e-05, entity: {'book_id': 1050, 'book_name': '1050', 'word_count': 11050}\n",
+      "id: 1263, distance: 1.860082738858182e-05, entity: {'book_id': 1263, 'book_name': '1263', 'word_count': 11263}\n",
+      "id: 201, distance: 2.0475592464208603e-05, entity: {'book_id': 201, 'book_name': '201', 'word_count': 10201}\n",
+      "id: 598, distance: 2.5180794182233512e-05, entity: {'book_id': 598, 'book_name': '598', 'word_count': 10598}\n",
+      "id: 597, distance: 2.699909600778483e-05, entity: {'book_id': 597, 'book_name': '597', 'word_count': 10597}\n",
+      "id: 833, distance: 2.749182931438554e-05, entity: {'book_id': 833, 'book_name': '833', 'word_count': 10833}\n",
+      "id: 1805, distance: 3.0744013201911e-05, entity: {'book_id': 1805, 'book_name': '1805', 'word_count': 11805}\n",
+      "id: 828, distance: 4.841619738726877e-05, entity: {'book_id': 828, 'book_name': '828', 'word_count': 10828}\n",
+      "id: 1589, distance: 5.490558032761328e-05, entity: {'book_id': 1589, 'book_name': '1589', 'word_count': 11589}\n"
      ]
     }
    ],
@@ -204,10 +191,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "outputs": [],
    "source": [
-    "# Releases the collection data from memory.\n",
     "collection.release()"
    ],
    "metadata": {
@@ -219,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "outputs": [],
    "source": [],
    "metadata": {
