--- a/操作向量数据库milvus/f1_Search_and_Query.ipynb
+++ b/操作向量数据库milvus/f1_Search_and_Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442740025122357251, success count: 2000, err count: 0)"
+      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442749867213193217, success count: 2000, err count: 0)"
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,6 +72,8 @@
     "    index_name=\"scalar_index\",\n",
     ")\n",
     "\n",
+    "collection.load()\n",
+    "\n",
     "collection.insert([[i for i in range(2000)],\n",
     "                   [str(i) for i in range(2000)],\n",
     "                   [i for i in range(10000, 12000)],\n",
@@ -86,21 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "outputs": [],
-   "source": [
-    "collection.load()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Conduct a hybrid vector search\n",
@@ -127,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -135,14 +123,14 @@
      "text": [
       "id: 201, distance: 2.0475592464208603e-05, entity: {'book_id': 201, 'book_name': '201', 'word_count': 10201}\n",
       "id: 598, distance: 2.5180794182233512e-05, entity: {'book_id': 598, 'book_name': '598', 'word_count': 10598}\n",
+      "id: 597, distance: 2.699909600778483e-05, entity: {'book_id': 597, 'book_name': '597', 'word_count': 10597}\n",
       "id: 833, distance: 2.749182931438554e-05, entity: {'book_id': 833, 'book_name': '833', 'word_count': 10833}\n",
+      "id: 828, distance: 4.841619738726877e-05, entity: {'book_id': 828, 'book_name': '828', 'word_count': 10828}\n",
+      "id: 604, distance: 5.6165743444580585e-05, entity: {'book_id': 604, 'book_name': '604', 'word_count': 10604}\n",
+      "id: 51, distance: 5.969862831989303e-05, entity: {'book_id': 51, 'book_name': '51', 'word_count': 10051}\n",
       "id: 433, distance: 6.296827632468194e-05, entity: {'book_id': 433, 'book_name': '433', 'word_count': 10433}\n",
       "id: 789, distance: 6.53224706184119e-05, entity: {'book_id': 789, 'book_name': '789', 'word_count': 10789}\n",
-      "id: 825, distance: 8.589174831286073e-05, entity: {'book_id': 825, 'book_name': '825', 'word_count': 10825}\n",
-      "id: 140, distance: 0.0001263414742425084, entity: {'book_id': 140, 'book_name': '140', 'word_count': 10140}\n",
-      "id: 768, distance: 0.00013537416816689074, entity: {'book_id': 768, 'book_name': '768', 'word_count': 10768}\n",
-      "id: 577, distance: 0.00014289363753050566, entity: {'book_id': 577, 'book_name': '577', 'word_count': 10577}\n",
-      "id: 811, distance: 0.00014392480079550296, entity: {'book_id': 811, 'book_name': '811', 'word_count': 10811}\n"
+      "id: 142, distance: 8.129695197567344e-05, entity: {'book_id': 142, 'book_name': '142', 'word_count': 10142}\n"
      ]
     }
    ],
@@ -160,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "collection.release()"
