--- a/操作向量数据库milvus/f2_Search_and_Query.ipynb
+++ b/操作向量数据库milvus/f2_Search_and_Query.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,13 +16,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
-      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442740278675636225, success count: 2000, err count: 0)"
+      "text/plain": "(insert count: 2000, delete count: 0, upsert count: 0, timestamp: 442749871145353217, success count: 2000, err count: 0)"
      },
-     "execution_count": 120,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,6 +72,8 @@
     "    index_name=\"scalar_index\",\n",
     ")\n",
     "\n",
+    "collection.load()\n",
+    "\n",
     "collection.insert([[i for i in range(2000)],\n",
     "                   [str(i) for i in range(2000)],\n",
     "                   [i for i in range(10000, 12000)],\n",
@@ -86,21 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "outputs": [],
-   "source": [
-    "collection.load()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Unlike a vector similarity search, a vector query retrieves vectors via scalar filtering based on boolean expression.\n",
@@ -122,13 +110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "[{'book_id': 3, 'book_intro': [0.54245764, 0.8402737]},\n {'book_id': 4, 'book_intro': [0.09124215, 0.9747137]}]"
+      "text/plain": "[{'book_id': 3, 'book_intro': [0.6489556, 0.48023546]},\n {'book_id': 4, 'book_intro': [0.18178387, 0.9374216]}]"
      },
-     "execution_count": 123,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "collection.release()"
