--- a/操作向量数据库milvus/f2_Search_and_Query.ipynb
+++ b/操作向量数据库milvus/f2_Search_and_Query.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import random\n",
-    "from pymilvus import connections, CollectionSchema, FieldSchema, DataType, Collection, utility\n",
+    "from pymilvus import connections, CollectionSchema, FieldSchema, DataType, Collection\n",
     "\n",
     "connections.connect(host='127.0.0.1', port='19530')"
    ]
