深分页查询scroll学习

--- a/操作分布式搜索和分析引擎Elasticsearch/索引/base.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/索引/base.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "es = Elasticsearch([{'host': 'localhost', 'port': 9200}])"
@@ -27,13 +27,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "outputs": [
     {
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1678760984121',\n    'number_of_replicas': '1',\n    'uuid': 'iBvf0_FVTAinfAXVxq3A0g',\n    'version': {'created': '7110299'}}}}}"
+      "text/plain": "{'es0': {'aliases': {},\n  'mappings': {},\n  'settings': {'index': {'routing': {'allocation': {'include': {'_tier_preference': 'data_content'}}},\n    'number_of_shards': '1',\n    'provided_name': 'es0',\n    'creation_date': '1690423666830',\n    'number_of_replicas': '1',\n    'uuid': '2UzQC2_LR_2kPZmyU8zkoA',\n    'version': {'created': '7110299'}}}}}"
      },
-     "execution_count": 20,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,13 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 31,
    "outputs": [
     {
      "data": {
       "text/plain": "True"
      },
-     "execution_count": 21,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,18 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "yellow open es0                             iBvf0_FVTAinfAXVxq3A0g 1 1  0   0    208b    208b\n",
-      "green  open .apm-custom-link                OU_WnrQDRnyz489YhGIWOw 1 0  0   0    208b    208b\n",
-      "green  open .kibana-event-log-7.11.2-000001 BF4u1pIyQqGFpJOyFwkLPA 1 0  1   0   5.6kb   5.6kb\n",
-      "green  open .kibana_task_manager_1          JQbY1XblTqaiGDZRdlQ7GQ 1 0  8 165 124.6kb 124.6kb\n",
-      "green  open .apm-agent-configuration        DbBwXqCPRLa8VeScjPC_6g 1 0  0   0    208b    208b\n",
-      "green  open .kibana_1                       f6K2EATnRYWCSZ0JkH1rmw 1 0 22  13   4.2mb   4.2mb\n",
+      "yellow open search_data_check               8rqQXwuiRl-2IpEbpne6Zg 1 1 7284   0   333kb   333kb\n",
+      "yellow open es0                             2UzQC2_LR_2kPZmyU8zkoA 1 1    0   0    208b    208b\n",
+      "green  open .apm-custom-link                PJykTA2lS_Oc8pzoPiqaDQ 1 0    0   0    208b    208b\n",
+      "green  open .kibana_task_manager_1          1nbC0Vr9Tq65ClIGyFXSNA 1 0    8 126 187.1kb 187.1kb\n",
+      "green  open .kibana-event-log-7.11.2-000001 JtjB-7pBR3i8ou6r3CeZ8g 1 0   37   0  59.2kb  59.2kb\n",
+      "green  open .apm-agent-configuration        NvUqDt6nSGqEr9hXG7J18w 1 0    0   0    208b    208b\n",
+      "yellow open snap_result                     i_MTCAkAR_i9XWN-A-uR-g 1 1    0   0    208b    208b\n",
+      "green  open .kibana_1                       zvsAuCopQQ26TgoVTZFqYg 1 0   20   2   2.1mb   2.1mb\n",
+      "yellow open snap_entry                      lmmSktpWQpmIetRzxdLE1A 1 1    0   0    208b    208b\n",
+      "yellow open search_data_ds                  xrCRCkTMTWK0Y1MiDuxkvw 1 1 9211   0   2.5mb   2.5mb\n",
       "\n"
      ]
     }
@@ -141,13 +145,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'count': 0, '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Returns number of documents matching a query.\n",
+    "'''\n",
+    "GET /es0/_count\n",
+    "'''\n",
+    "print(es.count(index='es0'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": "'\\nDELETE es0\\n'"
      },
-     "execution_count": 23,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "outputs": [],
    "source": [],
    "metadata": {
