--- a/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/wildcard.ipynb
+++ b/操作分布式搜索和分析引擎Elasticsearch/base查询数据/search/term-level_queries/wildcard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -11,7 +11,7 @@
      "data": {
       "text/plain": "{'acknowledged': True, 'shards_acknowledged': True, 'index': 'es0'}"
      },
-     "execution_count": 19,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,21 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': '2',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 2,\n '_primary_term': 1}"
+      "text/plain": "{'_index': 'es0',\n '_type': '_doc',\n '_id': 'if001',\n '_version': 1,\n 'result': 'created',\n '_shards': {'total': 2, 'successful': 1, 'failed': 0},\n '_seq_no': 2,\n '_primary_term': 1}"
      },
-     "execution_count": 20,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "es.index('es0', id=0, body={\"user\": {\"id\": \"kiway good\"}})\n",
-    "es.index('es0', id=1, body={\"user\": {\"id\": \"good kiy\"}})\n",
-    "es.index('es0', id=2, body={\"user\": {\"id\": \"good knowledge\"}})"
+    "es.index('es0', id=\"as001\", body={\"user\": {\"id\": \"kiway good\"}})\n",
+    "es.index('es0', id=\"as002\", body={\"user\": {\"id\": \"good kiy\"}})\n",
+    "es.index('es0', id=\"if001\", body={\"user\": {\"id\": \"good knowledge\"}})"
    ],
    "metadata": {
     "collapsed": false,
@@ -50,13 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'took': 1,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 2, 'relation': 'eq'},\n  'max_score': 1.0,\n  'hits': [{'_index': 'es0',\n    '_type': '_doc',\n    '_id': '0',\n    '_score': 1.0,\n    '_source': {'user': {'id': 'kiway good'}}},\n   {'_index': 'es0',\n    '_type': '_doc',\n    '_id': '1',\n    '_score': 1.0,\n    '_source': {'user': {'id': 'good kiy'}}}]}}"
+      "text/plain": "{'took': 0,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 0, 'relation': 'eq'},\n  'max_score': None,\n  'hits': []}}"
      },
-     "execution_count": 21,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,17 +90,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 49,
    "outputs": [
     {
      "data": {
-      "text/plain": "{'acknowledged': True}"
+      "text/plain": "{'took': 0,\n 'timed_out': False,\n '_shards': {'total': 1, 'successful': 1, 'skipped': 0, 'failed': 0},\n 'hits': {'total': {'value': 3, 'relation': 'eq'},\n  'max_score': 1.0,\n  'hits': [{'_index': 'es0', '_type': '_doc', '_id': 'as001', '_score': 1.0},\n   {'_index': 'es0', '_type': '_doc', '_id': 'as002', '_score': 1.0},\n   {'_index': 'es0', '_type': '_doc', '_id': 'if001', '_score': 1.0}]}}"
      },
-     "execution_count": 22,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "es.search(index='es0', body=\n",
+    "{\n",
+    "  \"query\": {\n",
+    "     \"match_all\": {}\n",
+    "   },\n",
+    "  \"_source\": False,\n",
+    "}\n",
+    "          )"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "es.indices.delete('es0')"
    ],
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
